--- a/src/main/resources/templates/reporter/projects.html
+++ b/src/main/resources/templates/reporter/projects.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="row" th:if="${not #lists.isEmpty(projects.getProjects())}">
                     
-                        <div class="table-responsive " th:if="${not #lists.isEmpty(projects.getProjects())}">
+                        <div class="table " th:if="${not #lists.isEmpty(projects.getProjects())}">
                             <table class="table table-sm table-hover table-m-0 col-sm-12">
                                 <thead class="thead-dark">
                                 <tr>
@@ -60,13 +60,13 @@
                                     <td th:text="${project.name}">Project name</td>
                                     <td th:text="${project.description}">Project description</td>
                                     <td colspan="2">
-                                        <table class="table mb-0">
+                                        <table class="table mb-0 table-borderless">
                                             <tbody>
                                                 <tr th:each="api : ${project.getApis()}">
-                                                    <td>API: <span th:text="${api}"></span></td>                
+                                                    <td>API: <a th:href="'/reporter/specs/'+ ${api.getId()}" th:text="${api.getName()}"></a></td>
                                                 </tr>
                                                 <tr th:each="domain : ${project.getDomains()}">
-                                                    <td>Domain: <span th:text="${domain}"></span></td>
+                                                    <td>Domain: <a th:href="'/reporter/specs/'+ ${domain.getId()}" th:text="${domain.getName()}"></a></td>
                                                 </tr>
                                             </tbody>
                                         </table>
