--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html th:fragment="layout (template, menu)" >
 
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
+<!--<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>-->
+<!--<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>-->
 
-<head>
+<head th:insert="fragments/scripts">
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta charset="utf-8">
@@ -13,18 +13,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.png}">
 
-    <!-- CSS only -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css" integrity="sha384-qF/QmIAj5ZaYFAeQcrQ6bfVMAh4zZlrGwTPY7T/M+iTTLJqJBJjwwnsE5Y0mV7QK" crossorigin="anonymous">-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/sandstone/bootstrap.min.css" integrity="sha384-zEpdAL7W11eTKeoBJK1g79kgl9qjP7g84KfK3AZsuonx38n8ad+f5ZgXtoSDxPOh" crossorigin="anonymous">
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!--    <link rel="stylesheet" th:href="@{/resources/css/petclinic.css}"/>-->
     <title>SwaggerHub reporter :: Explore and generate reports</title>
 
 </head>
@@ -81,59 +69,6 @@
         </ul>
     </div>
 </nav>
-<!--
-
-<nav class="navbar navbar-default" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" th:href="@{/}"><span></span></a>
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
-                <span class="sr-only">
-                    <os-p>Toggle navigation</os-p>
-                </span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        <div class="navbar-collapse collapse" id="main-navbar">
-
-            <ul class="nav navbar-nav navbar-right" th:remove="all">
-
-                <li th:fragment="menuItem (path,active,title,glyph,text)" class="active"
-                    th:class="${active==menu ? 'active' : ''}">
-                    <a th:href="@{__${path}__}" th:title="${title}">
-                        <span th:class="'glyphicon  glyphicon-'+${glyph}" class="glyphicon glyphicon-home"
-                              aria-hidden="true"></span>
-                        <span th:text="${text}">Template</span>
-                    </a>
-                </li>
-
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-
-                <li th:replace="::menuItem ('/','home','home page','home','Home')">
-                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                    <span>Home</span>
-                </li>
-
-                <li th:replace="::menuItem ('/reporter/specs','specs','Specification list','search','Specification list')">
-                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                    <span>Specifications</span>
-                </li>
-
-                <li th:replace="::menuItem ('/reporter/api/aso-admin_api/2.0.5','api','ASO admin api','search','ASO Admin api 2.0.5')">
-                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                    <span>ASO Admin API - 2.0.5</span>
-                </li>
-
-            </ul>
-        </div>
-    </div>
-</nav>
-
--->
 
 <div class="container-fluid">
     <div class="container xd-container">
@@ -145,16 +80,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <img src="../static/resources/images/spring-pivotal-logo.png"
-                         th:src="@{/resources/images/spring-pivotal-logo.png}"
-                         alt="Sponsored by Pivotal"/></div>
+                    <img src="../static/resources/images/tuxcat.png"
+                         th:src="@{/resources/images/tuxcat.png}"
+                         alt="TuxCat"/></div>
             </div>
         </div>
     </div>
 </div>
-
-
-
 
 </body>
 
