--- a/src/main/resources/templates/reporter/unresolved.html
+++ b/src/main/resources/templates/reporter/unresolved.html
@@ -1,130 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'unresolved')}">
-<head>
-  <meta charset="UTF-8"/>
-  <title>Projects report</title>
-  <!--    &lt;!&ndash; Latest compiled and minified CSS &ndash;&gt;
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  
-      &lt;!&ndash; Latest compiled and minified JavaScript &ndash;&gt;
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-              integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-              crossorigin="anonymous"></script>-->
-  <!-- CSS only -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css" integrity="sha384-qF/QmIAj5ZaYFAeQcrQ6bfVMAh4zZlrGwTPY7T/M+iTTLJqJBJjwwnsE5Y0mV7QK" crossorigin="anonymous">-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/sandstone/bootstrap.min.css" integrity="sha384-zEpdAL7W11eTKeoBJK1g79kgl9qjP7g84KfK3AZsuonx38n8ad+f5ZgXtoSDxPOh" crossorigin="anonymous">
-
-  <!-- Latest compiled and minified JavaScript -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+<head th:insert="fragments/scripts">
+    <meta charset="UTF-8"/>
+    <title>Projects report</title>
 </head>
 <body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
 <div class="container-fluid" style="margin-top: 20px">
-  <div class="row">
-    <div class="panel panel-heading">
-      <h3>Specification unresolved (<span th:text="${unresolved.getTotal()}">0</span>)</h3>
-      <p>This specifications are probably wrong defined in Swagger Hub, can't be downloaded as resolved specifications</p>
+
+    <div class="row">
+        <div class="panel panel-heading">
+            <h3>Specification unresolved (<span th:text="${unresolved.getTotal()}">0</span>)</h3>
+            <p>This specifications are probably wrong defined in Swagger Hub, can't be downloaded as resolved
+                specifications</p>
+        </div>
     </div>
-  </div>
 
-
-      
-      
-      <div class="container">
+    <div class="container">
         <div class="row">
-          <div class="col-sm-1"><h4>Type</h4></div>
-          <div class="col-sm-4"><h4>Name</h4></div>
-          <div class="col-sm-1"><h4>Version</h4></div>
-          <div class="col-sm-4"><h4>Title</h4></div>
-          <div class="col-sm-1"><h4>View</h4></div>
+            <div class="col-sm-1"><h4>Type</h4></div>
+            <div class="col-sm-4"><h4>Name</h4></div>
+            <div class="col-sm-1"><h4>Version</h4></div>
+            <div class="col-sm-4"><h4>Title</h4></div>
+            <div class="col-sm-1"><h4>View</h4></div>
         </div>
 
         <tr th:each="item : ${unresolved.getUnresolvedSpecs()}">
-          <div class="row">
-              <div class="col-sm-1" th:text="${item.getType()}">Type</div>
-              <div class="col-sm-4" th:text="${item.getName()}">Name</div>
-              <div class="col-sm-1" th:text="${item.getVersion()}">Version</div>
-              <div class="col-sm-4" th:text="${item.getTitle()}">Title</div>
-              <div class="col-sm-1">
-                <i class="icon-search icon-white"></i>
-                <button class="badge badge-primary" type="button" data-bs-toggle="collapse" aria-expanded="false" th:attr="data-bs-target='#'+${item.getName()}, aria-controls=${item.getName()}">
-                  View unresolved                                                           
-                </button>
-              </div>            
-          </div>
-          <div class="collapse" th:attr="id=${item.getName()}">
-            <div class="card card-body">
-              <pre th:text="${item.getResolved()}">openapi: .....blablablab .....</pre>
+            <div class="row">
+                <div class="col-sm-1" th:text="${item.getType()}">Type</div>
+                <div class="col-sm-4" th:text="${item.getName()}">Name</div>
+                <div class="col-sm-1" th:text="${item.getVersion()}">Version</div>
+                <div class="col-sm-4" th:text="${item.getTitle()}">Title</div>
+                <div class="col-sm-1">
+                    <i class="icon-search icon-white"></i>
+                    <button class="badge badge-primary" type="button" data-bs-toggle="collapse" aria-expanded="false"
+                            th:attr="data-bs-target='#'+${item.getName()}, aria-controls=${item.getName()}">
+                        View unresolved
+                    </button>
+                </div>
             </div>
-          </div>
-          
+            <div class="collapse" th:attr="id=${item.getName()}">
+                <div class="card card-body">
+                    <pre th:text="${item.getResolved()}">openapi: .....blablablab .....</pre>
+                </div>
+            </div>
+
         </tr>
-        
-      </div>
-      
-      
-            
 
-            <!--<div class="table " th:if="${not #lists.isEmpty(unresolved.getUnresolvedSpecs())}">
-              <table class="table table-sm table-hover table-m-0 col-sm-12">
-                <thead class="thead-dark">
-                    <tr>
-                      <th class="text-center">Type</th>
-                      <th class="text-center">Name</th>
-                      <th class="text-center">Version</th>
-                      <th class="text-center">Title</th>
-                      <th class="text-center">View</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:remove="all">
-                      <td th:text="${item.getType()}">Specification type</td>
-                      <td th:text="${item.getName()}">Specification name</td>
-                      <td th:text="${item.getVersion()}">Specification version</td>
-                      <td th:text="${item.getTitle()}">Specification title</td>
-                      <td>VIEW UNRESOLVED</td>
-                    </tr>
-                    <tr th:remove="all">
-                      <td th:text="${item.getType()}">Specification type</td>
-                      <td th:text="${item.getName()}">Specification name</td>
-                      <td th:text="${item.getVersion()}">Specification version</td>
-                      <td th:text="${item.getTitle()}">Specification title</td>
-                      <td>VIEW UNRESOLVED</td>
-                    </tr>
-                    <tr th:each="item : ${unresolved.getUnresolvedSpecs()}">
-                      
-                        <td th:text="${item.getType()}"  class="text-center">Specification type</td>
-                        <td th:text="${item.getName()}">Specification name</td>
-                        <td th:text="${item.getVersion()}"  class="text-center">Specification version</td>
-                        <td th:text="${item.getTitle()}">Specification title</td>
-                        <td class="text-center">
-                          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                            Button with data-bs-target
-                          </button>
-                        </td>
-                    </tr>
-                
-                </tbody>
-              </table>
-            </div>-->
-
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
 
 </div>
-
 
 <script src="http://getbootstrap.com/2.3.2/assets/js/jquery.js"></script>
 <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap.js"></script>
 
 <script src="http://getbootstrap.com/2.3.2/assets/js/holder/holder.js"></script>
-<script
-        src="http://getbootstrap.com/2.3.2/assets/js/google-code-prettify/prettify.js"></script>
+<script src="http://getbootstrap.com/2.3.2/assets/js/google-code-prettify/prettify.js"></script>
 
 <script src="http://getbootstrap.com/2.3.2/assets/js/application.js"></script>
 
