--- a/src/main/resources/templates/reporter/users.html
+++ b/src/main/resources/templates/reporter/users.html
@@ -46,6 +46,7 @@
 <!--                        <td th:text="${user.lastName}">Last name</td>-->
                         <td th:text="${user.role}"></td>Role</td>
                         <td th:text="${user.lastActive}">Last active</td>
+                        <td th:text="${user.deleteCandidate}">Deletable</td>
                     </tr>
                     <tr th:each="user : ${users.users}">
                         <td th:text="${user.userId}">User ID</td>
@@ -54,7 +55,11 @@
                         <td th:text="${user.role}">Role</td>
                         <td th:text="${#temporals.format(user.lastActive, 'yyyy-MM-dd HH:mm')}">Last active</td>
                         <td th:if="${user.deleteCandidate == false }" class="text-center"><span class="badge bg-success w-75">OK</span></td>
-                        <td th:if="${user.deleteCandidate == true}" class="text-center"><span class="badge bg-danger w-75">Delete</span></td>
+                        <td th:if="${user.deleteCandidate == true}" class="text-center">
+                            <form th:action="@{/user/{userUuid}(userUuid=${user.userId})}" th:method="post">
+                                <button type="submit" class="badge bg-danger w-75">Delete</button>
+                            </form>
+                        </td>
                     </tr>
                 </tbody>
                 <tfoot>
